# zensim

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEEDBACK.md  README.md  STREAMING_PREVIEW_VALIDATION.md  STREAMING_PREVIEW_VALIDATION_REAL.md  all-regressions.csv  calibrate_zenjpeg.sh  regression-report.md  test-corpus-manifest.tsv  unanimous-regressions.csv  zengrid-proposal.md
.github/workflows/: ci.yml  release-tools.yml
benchmarks/: scale_invariance_2026-04-17.csv  scale_invariance_2026-04-17.html  scale_invariance_filter-spike_2026-04-17.csv  scale_invariance_text-ui_2026-04-17.csv  scale_invariance_text-ui_2026-04-17.html
docs/: alpha-channel-diffing.md  jxl-encoding.md  scale-invariance.md
scripts/: calibrate_metrics.sh  calibrate_pareto.sh  curate-repro-corpus.py
tools/: zensim-focused-sweep.sh  zensim-optimize.py  zensim-sweep.sh
tools/sweep-results/: coord_opt_4img_2026-03-08.json  coord_opt_8img_2026-03-08.json  coord_opt_8img_thresh1.5_2026-03-08.json  phase3_sweep_2026-03-08.tsv
weights/: gpu_butteraugli_v1_12k.txt  gpu_ssim2_v1_12k.txt  gpu_ssim2_v2_163k.txt
weights/logs/: train_20260227T062922_gpu_ssim2.txt
zensim/: Cargo.toml
zensim-bench/: Cargo.toml  build.rs
zensim-bench/benches/: bench_compare.rs  bench_zensim.rs
zensim-bench/examples/: zwe_zenbench.rs
zensim-bench/ffi/: butteraugli_ffi.cpp  butteraugli_ffi.h  ssimulacra2_ffi.cpp  ssimulacra2_ffi.h
zensim-cli/: Cargo.toml
zensim-cli/src/: main.rs
zensim-regress/: Cargo.toml  README.md  font_results.json
zensim-regress/.zenbench/baselines/: initial.json  v2.json  v3.json  v4-strided.json
zensim-regress/benches/: bench_color_diffmap.rs  bench_font.rs  bench_mismatch.rs
zensim-regress/examples/: checksum_lifecycle.rs  cross_arch_tolerance.rs  layout_gallery.rs  manager_workflow.rs  meta_montage.rs  montage_diff.rs  montage_regression.rs  precompute_breakdown.rs  scale0_correlation.rs  scale0_correlation_real.rs  score_dump.rs  scratch_potential.rs  slice_canonical_correlation.rs  slice_localized_distortion.rs  slice_real_codec_localization.rs  syntax_comparison.rs  visual_diff.rs
zensim-regress/src/: arch.rs  checksum_file.rs  checksums.rs  checksums_v2.rs  diff_image.rs  diff_summary.rs  display.rs  distortions.rs  error.rs  fetch.rs  font.rs  generators.rs  hasher.rs  layout.rs  lib.rs  lock.rs  manager.rs  manifest.rs  oracle.rs  petname.rs  remote.rs  report.rs  simd.rs  testing.rs  tolerance.rs  upload.rs
zensim-regress/src/layout/: color.rs  compose.rs  diagnostics.rs  geom.rs  grid.rs  label.rs  layers.rs  macros.rs  modifiers.rs  node.rs  paint.rs  safety.rs  sizing.rs  stack.rs  text.rs
zensim-regress/src/pixel_ops/: mod.rs
zensim-regress/tests/: orientation.rs  real_images.rs  workflow_integration.rs
zensim-validate/: Cargo.toml  TODO.md
zensim-validate/examples/: concordance_filter.rs  monotonic_filter.rs
zensim-validate/src/: main.rs  mlp_train.rs  scale_invariance.rs
zensim-validate/weights/: gpu_butteraugli_v2_163k.txt
zensim-validate/weights/logs/: train_20260227T063305_gpu_butteraugli.txt
zensim-wasm-tests/: Cargo.toml
zensim-wasm-tests/src/: lib.rs
zensim-wasm-tests/tests/: wasm_regression.rs
zensim-wasm-tests/tests/checksums/: wasm.checksums
zensim/benches/: bench_zensim.rs
zensim/examples/: zensim_score.rs
zensim/src/: blur.rs  color.rs  diffmap.rs  error.rs  fused.rs  lib.rs  mapping.rs  metric.rs  pool.rs  profile.rs  simd_ops.rs  source.rs  streaming.rs  streaming_diffmap.rs  testing.rs  zenpixels_compat.rs
zensim/src/mlp/: bake.rs  error.rs  inference.rs  mod.rs  model.rs  scorer.rs  tests.rs
zensim/tests/: classification.rs  corpus_icc.rs  cross_platform.rs  cross_tier.rs  generate_bitops.rs  icc_coverage.rs  imageflow_checksums.rs  linear_srgb_equiv.rs  nan_repro.rs  streaming_diffmap_parity.rs  v04_mlp.rs  zenpixels_compat.rs
zensim/tests/common/: distortions.rs  generators.rs  mod.rs
zensim/tests/fixtures/: generate.sh  imageflow_checksum_pairs.json
