[workspace]
resolver = "2"
members = ["zensim", "zensim-validate", "zensim-regress", "zensim-bench"]

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
zensim = { version = "0.2.4", path = "zensim" }
archmage = { version = "0.9.14", features = ["macros", "avx512"] }
magetypes = { version = "0.9.14", features = ["avx512"] }
bytemuck = { version = "1.25", default-features = false }
thiserror = "2"
image = "0.25"
rayon = "1.10"
imgref = "1.12"
rgb = { version = "0.8", default-features = false, features = ["bytemuck"] }
linear-srgb = { version = "0.6.5", default-features = false, features = ["std"] }
codec-corpus = { version = "1.1.0", path = "/home/lilith/work/codec-corpus/crate" }
# zenresize = { path = "../zenresize", default-features = false, features = ["std"] }  # re-enable when published
