[workspace]
resolver = "2"
members = ["zensim", "zensim-validate", "zensim-regress", "zensim-bench", "zensim-wasm-tests"]

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
zensim = { version = "0.2.6", path = "zensim", default-features = false }
zensim-regress = { version = "0.3.1", path = "zensim-regress", default-features = false }
archmage = { version = "0.9.23", features = ["macros", "avx512"] }
magetypes = { version = "0.9.23", features = ["avx512"] }
bytemuck = { version = "1.25", default-features = false }
thiserror = "2"
image = "0.25"
rayon = "1.10"
imgref = "1.12"
rgb = { version = "0.8", default-features = false, features = ["bytemuck"] }
linear-srgb = { version = "0.6.7", default-features = false, features = ["std"] }
codec-corpus = "1.0.3"
zenbench = "0.1.2"
zenresize = { version = "0.2.1", default-features = false, features = ["std"] }
