[package]
name = "zensim-bench"
version = "0.0.0"
edition = "2024"
publish = false

[features]
training = ["zensim/training"]
# zenresize = ["zensim/zenresize"]

[build-dependencies]
cc = "1"

[dependencies]
zensim = { workspace = true }
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
ssimulacra2 = "0.5"
fast-ssim2 = { version = "0.7", features = ["imgref"] }
butteraugli = "0.9"
linear-srgb = { workspace = true }
imgref = { workspace = true }
rgb = { workspace = true }
zenpnm = "0.1"
bytemuck = { workspace = true }
which = "8"

[[bench]]
name = "bench_compare"
harness = false

[[bench]]
name = "bench_zensim"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(feature, values("zenresize", "training"))', 'cfg(has_cpp_ssimulacra2)', 'cfg(has_cpp_butteraugli)']
