[package]
name = "zensim-regress"
version = "0.3.1"
edition = "2024"
description = "Visual regression testing persistence and workflow for zensim"
repository = "https://github.com/imazen/zensim"
license = "MIT OR Apache-2.0"
rust-version = "1.89.0"
keywords = ["visual", "regression", "testing", "image", "checksum"]
categories = ["development-tools::testing", "multimedia::images"]
exclude = ["examples/*.png", "tests/fixtures/", "CLAUDE.md", "CONTEXT-HANDOFF.md", "FEEDBACK.md", ".claude/", ".superwork/", ".zenbench/", "copter-report/", ".github/", "Cross.toml", "justfile", "Cargo.toml.original.txt", "fuzz/"]

[features]
default = ["threads"]
## Forward threading to zensim. Disable for wasm32 or single-threaded use.
threads = ["zensim/threads"]
archmage = ["dep:archmage"]
zenresize = ["dep:zenresize"]

[dependencies]
zensim = { workspace = true, default-features = false, features = ["classification"] }
archmage = { workspace = true, features = ["testable_dispatch"], optional = true }
zenresize = { workspace = true, optional = true }
# zenpng = { workspace = true, optional = true }
# enough = { workspace = true, optional = true }
seahash = "4.1.0"
image = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs2 = "0.4.3"

[dev-dependencies]
tempfile = "3.27.0"
archmage = { workspace = true, features = ["testable_dispatch"] }
codec-corpus = { workspace = true }
zenbench = { workspace = true }
# codec-corpus-fetch is local-only; uncomment for real_images tests
# codec-corpus-fetch = { path = "/home/lilith/work/codec-corpus-fetch" }

[[bench]]
name = "bench_mismatch"
harness = false
