[package]
name = "zensim-validate"
version = "0.1.0"
edition = "2024"
description = "Validation harness: correlate zensim against human quality ratings"
license = "MIT"
publish = false

[features]
default = []
# zenresize = ["zensim/zenresize"]  # re-enable when zenresize published

[dependencies]
zensim = { path = "../zensim", features = ["training"] }
image = { workspace = true }
rayon = { workspace = true }
csv = "1"
calamine = "0.34"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
glob = "0.3"
cmaes = { version = "0.2", default-features = false }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(feature, values("zenresize"))']
