[package]
name = "zensim"
version = "0.1.0"
edition = "2024"
description = "Fast psychovisual image similarity metric"
repository = "https://github.com/imazen/zensim"
license = "MIT OR Apache-2.0"
readme = "../README.md"
rust-version = "1.89.0"
keywords = ["image", "quality", "ssim", "perceptual", "similarity"]
categories = ["multimedia::images", "computer-vision"]
exclude = ["benches/", "tests/"]

[features]
default = ["avx512", "imgref"]
avx512 = ["archmage/avx512", "magetypes/avx512"]
## Exposes training/research API: ZensimConfig, score_from_features, WEIGHTS,
## FEATURES_PER_SCALE. These items control metric internals (blur kernel,
## scale count) whose outputs are incomparable with the default trained weights.
training = []
## Exposes classification API: classify(), ClassifiedResult, ErrorClassification,
## DeltaStats, AlphaStratifiedStats. Used by zensim-regress for regression testing.
classification = []
## Enable ImageSource impls for imgref::ImgRef<Rgb<u8>> and ImgRef<Rgba<u8>>.
imgref = ["dep:imgref", "dep:rgb"]
## Enable high-quality downscale filters (Mitchell, Lanczos) for pyramid construction.
## Uses zenresize for resampling — training/research feature.
## Commented out: zenresize not yet published to crates.io.
# zenresize = ["dep:zenresize"]

[dependencies]
archmage = { workspace = true }
bytemuck = { workspace = true }
magetypes = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
linear-srgb = { workspace = true }
imgref = { workspace = true, optional = true }
rgb = { workspace = true, optional = true }
# zenresize = { workspace = true, optional = true }  # re-enable when published

[dev-dependencies]
image = { workspace = true }
archmage = { workspace = true, features = ["testable_dispatch"] }
serde_json = "1"

[lints.clippy]
uninlined_format_args = "allow"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(feature, values("zenresize", "training", "imgref", "classification"))']  # zenresize kept in check-cfg for gated code
